# CharlottePlanE

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  aircraft.cpp  aircraft.h  aircraftData.h  autopilot.cpp  autopilot.h  config.h  constants.h  flyByWire.cpp  flyByWire.h  lights.h  logger.h  main.cpp  rc.cpp  rc.h  remoteData.h  settings.h  strip.h  types.h
main/core/: aircraftData.h  communicationManager.h  flyByWire.cpp  flyByWire.h  remoteData.h  vector3.h
main/hardware/: busHAL.h  busStream.h  channels.cpp  channels.h  light.h  lights.cpp  lights.h  motor.cpp  motor.h  motors.cpp  motors.h  strip.h
main/hardware/ADIRS/: ADIRS.cpp  ADIRS.h  BMP280.h  I2CADIRS.h  IMU.h  MPU9250.cpp  MPU9250.h  dummyADIRS.h  simADIRS.cpp  simADIRS.h
main/hardware/AHRS/: ADIRS.h  AHRS.h  BMP280.h  IMU.h  MPU9250.cpp  MPU9250.h
main/hardware/PWM/: LEDCPulseWidthModulator.h
main/hardware/ahrs/: ahrs.h  bmp280.h  gy-91.h  mpu9250.cpp  mpu9250.h
main/settings/: ADIRSSettings.h  autopilotSettings.h  lightsSettings.h  motorsSettings.h  settings.h  transceiverSettings.h  trimSettings.h
main/systems/: aircraftCommunicationManager.cpp  aircraftCommunicationManager.h  communicationManager.h  flyByWire.cpp  flyByWire.h  light.h  lights.cpp  lights.h  motor.cpp  motor.h  motors.cpp  motors.h
main/types/: aircraftData.h  generic.h  packet.h  remoteData.h  sinAndCos.h  vector3.h
main/utilities/: busStream.h  lowPassFilter.h  math.h
main/utils/: aircraftData.h  busStream.h  geographicCoordinates.h  math.h  remoteData.h
(+58 files in other folders)
