file(GLOB_RECURSE pizda_sources
    "*.*"
)

idf_component_register(
    SRCS ${pizda_sources}
    INCLUDE_DIRS "."
    REQUIRES
        esp_timer
        esp_driver_ledc
        esp_driver_uart
        esp_adc
        esp_driver_gptimer
        ESP-IDF-NVSExtensions
        ESP-IDF-Units
        ESP-IDF-SpatialTypes
        ESP-IDF-BitStream
        ESP-IDF-LowPassFilter
        ESP-IDF-BusHAL
        ESP-IDF-SX1262
        ESP-IDF-MPU9250
        ESP-IDF-BMP280
        ESP-IDF-Battery
)